--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,24 +5,22 @@ project (substrate)
 set (substrate_VERSION_MAJOR 0)
 set (substrate_VERSION_MINOR 1)
 
+set(CMAKE_BUILD_TYPE Debug)
+#set(CMAKE_BUILD_TYPE Release)
 
-# User's settings - C Flags
-# set(release "TRUE")
-set(release "FALSE")
-# Release
-if (release)
-set(CMAKE_C_FLAGS "-O3")
-# Debug # valgrind --show-reachable=yes --leak-check=full -v exe
-else()
-set(CMAKE_C_FLAGS "-O0 -g3")
-endif()
-# User's settings - General C Flags
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -pedantic -std=c99")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
+set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Wall -Wextra -pedantic -DDEBUG")
+set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -pedantic")
 
-set(EXECUTABLE_OUTPUT_PATH bin)
-
+#add the include directory containing the header files
 include_directories(${substrate_SOURCE_DIR}/include/)
+
+#add osl to the build
+set(osl_DIR ${substrate_SOURCE_DIR}/osl/)
+find_package(osl REQUIRED)
 
 add_executable(substrate
     src/substrate.c
     )
+
+target_link_libraries(substrate ${OSL_LIBRARY})
