--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "osl"]
 	path = osl
 	url = https://github.com/periscop/openscop.git
+[submodule "candl"]
+	path = candl
+	url = https://github.com/periscop/candl.git
