Add parallelism profile to the statement_profile.
For now, only the parallelism profile constructor is written, not the
rating function.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,8 @@ add_executable(substrate
     src/utils.c
     src/reuse_struct.c
     src/reuse.c
+    src/parallelism_struct.c
+    src/parallelism.c
     src/statement_profile.c
     src/analyze.c
     src/optimization.c
