--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ find_library(OSL_LIBRARY osl REQUIRED)
 #include_directories(${candl_DIR}/include)
 find_library(CANDL_LIBRARY candl REQUIRED)
 
-find_library(GMP_LIBRARY gmp REQUIRED)
+find_library(GMP_LIBRARY gmp)
 if (GMP_LIBRARY)
     find_library(PIPLIB_GMP_LIBRARY piplib_gmp REQUIRED)
 else()
@@ -53,8 +53,8 @@ add_executable(substrate
 
 target_link_libraries(substrate ${OSL_LIBRARY})
 target_link_libraries(substrate ${CANDL_LIBRARY})
-target_link_libraries(substrate ${GMP_LIBRARY})
-if (gmp_LIB)
+if (GMP_LIBRARY)
+    target_link_libraries(substrate ${GMP_LIBRARY})
     target_link_libraries(substrate ${PIPLIB_GMP_LIBRARY})
 else()
     target_link_libraries(substrate ${PIPLIB_DP_LIBRARY})
