Add vectorization analyze to substrate (need test)
The analyze of vectorization should be good, but it wasn't
tested yet.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,8 @@ add_executable(substrate
     src/reuse.c
     src/parallelism_struct.c
     src/parallelism.c
+    src/vectorization_struct.c
+    src/vectorization.c
     src/statement_profile.c
     src/analyze.c
     src/optimization.c
