--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,9 @@ set (substrate_VERSION_MINOR 1)
 set(CMAKE_BUILD_TYPE Debug)
 #set(CMAKE_BUILD_TYPE Release)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
+#-fgnu89-inline is added to remove pluto's warning about inline functions
+#not being defined.
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -fgnu89-inline")
 set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Wall -Wextra -pedantic -DDEBUG")
 set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -pedantic")
 
@@ -36,7 +38,25 @@ else()
     find_library(PIPLIB_DP_LIBRARY piplib_dp REQUIRED)
 endif()
 
-#find_package(GMP REQUIRED)
+include(ExternalProject)
+ExternalProject_Add(
+  pluto
+  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/pluto
+  CONFIGURE_COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR}/pluto/ && 
+    git submodule init && 
+    git submodule update && 
+    bash autogen.sh && 
+    ./configure --enable-debug
+  PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/pluto
+  BUILD_COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR}/pluto && make
+  INSTALL_COMMAND echo "Pluto won't be installed : bundle mode"
+  BUILD_IN_SOURCE 1
+)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/pluto/src)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/pluto/include)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/pluto/isl/include)
+add_library(libpluto SHARED IMPORTED)
+set_target_properties(libpluto PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/pluto/src/.libs/libpluto.so )
 
 add_executable(substrate
     src/utils.c
@@ -46,6 +66,7 @@ add_executable(substrate
     src/parallelism.c
     src/vectorization_struct.c
     src/vectorization.c
+    src/tiling_hyperplane_struct.c
     src/statement_profile.c
     src/analyze.c
     src/optimization.c
@@ -61,3 +82,4 @@ if (GMP_LIBRARY)
 else()
     target_link_libraries(substrate ${PIPLIB_DP_LIBRARY})
 endif()
+target_link_libraries(substrate libpluto)
