Update cmake file to allow to use local lib version
Instead of system wide installed libraries (osl, candl....),
if the subdirectory of the library is filled with the library
project/git, cmake will build and use it instead.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,27 +17,49 @@ set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -pedantic")
 #add the include directory containing the header files
 include_directories(${substrate_SOURCE_DIR}/include/)
 
+
 ###add osl to the build
-##Comment out to use git submodule osl directory, else we use installed lib.
-#set(osl_DIR ${substrate_SOURCE_DIR}/osl/)
-#add_subdirectory(osl)
-#include_directories(${osl_DIR}/include)
-find_library(OSL_LIBRARY osl REQUIRED)
+#If the "osl" directory is not empty, we assume that it is filled with
+#the openscop project. If this is the case, substrate will build and use
+#this version of libosl, instead of the system version.
+set(osl_DIR ${substrate_SOURCE_DIR}/osl/*)
+file(GLOB RESULT ${osl_DIR})
+if(RESULT)
+    add_subdirectory(osl)
+    include_directories(${osl_DIR}/include)
+    set(OSL_LIBRARY osl)
+else()
+    find_library(OSL_LIBRARY osl REQUIRED)
+endif()
 
 ###add candl to the build
-##Comment out to use git submodule candl directory, else we use installed lib.
-#set(candl_DIR ${substrate_SOURCE_DIR}/candl/)
-#add_subdirectory(candl)
-#include_directories(${candl_DIR}/include)
-find_library(CANDL_LIBRARY candl REQUIRED)
+#If the "candl" directory is not empty, we assume that it is filled with
+#the candl project. If this is the case, substrate will build and use
+#this version of libcandl, instead of the system version.
+
+set(candl_DIR ${substrate_SOURCE_DIR}/candl/*)
+file(GLOB RESULT ${candl_DIR})
+if(RESULT)
+    add_subdirectory(candl)
+    include_directories(${candl_DIR}/include)
+    set(CANDL_LIBRARY candl)
+else()
+    find_library(CANDL_LIBRARY candl REQUIRED)
+endif()
 
 ###add clay to the build
-##Comment out to use git submodule clay directory, else we use installed lib.
-#set(clay_DIR ${substrate_SOURCE_DIR}/clay/)
-#add_subdirectory(clay)
-#include_directories(${clay_DIR}/include)
-find_library(CLAY_LIBRARY clay REQUIRED)
-
+#If the "clay" directory is not empty, we assume that it is filled with
+#the clay project. If this is the case, substrate will build and use
+#this version of libclay, instead of the system version.
+set(clay_DIR ${substrate_SOURCE_DIR}/clay/*)
+file(GLOB RESULT ${clay_DIR})
+if(RESULT)
+    add_subdirectory(clay)
+    include_directories(${clay_DIR}/include)
+    set(CLAY_LIBRARY clay)
+else()
+    find_library(CLAY_LIBRARY clay REQUIRED)
+endif()
 
 find_library(GMP_LIBRARY gmp)
 if (GMP_LIBRARY)
@@ -46,26 +68,37 @@ else()
     find_library(PIPLIB_DP_LIBRARY piplib_dp REQUIRED)
 endif()
 
-include(ExternalProject)
-ExternalProject_Add(
-  pluto
-  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/pluto
-  CONFIGURE_COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR}/pluto/ && 
-    git submodule init && 
-    git submodule update && 
-    bash autogen.sh && 
-    ./configure --enable-debug
-  PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/pluto
-  BUILD_COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR}/pluto && make
-  INSTALL_COMMAND echo "Pluto won't be installed : bundle mode"
-  BUILD_IN_SOURCE 1
-)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/pluto/src)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/pluto/include)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/pluto/isl/include)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/pluto/clan/include)
-add_library(libpluto SHARED IMPORTED)
-set_target_properties(libpluto PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/pluto/src/.libs/libpluto.so )
+###add pluto to the build
+#If the "pluto" directory is not empty, we assume that it is filled with
+#the pluto project. If this is the case, substrate will build and use
+#this version of libpluto, instead of the system version.
+set(pluto_DIR ${substrate_SOURCE_DIR}/pluto/*)
+file(GLOB RESULT ${pluto_DIR})
+if(RESULT)
+    include(ExternalProject)
+    ExternalProject_Add(
+      pluto
+      SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/pluto
+      CONFIGURE_COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR}/pluto/ && 
+        git submodule init && 
+        git submodule update && 
+        bash autogen.sh && 
+        ./configure --enable-debug
+      PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/pluto
+      BUILD_COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR}/pluto && make
+      INSTALL_COMMAND echo "Pluto won't be installed : bundle mode"
+      BUILD_IN_SOURCE 1
+    )
+    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/pluto/src)
+    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/pluto/include)
+    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/pluto/isl/include)
+    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/pluto/clan/include)
+    add_library(libpluto SHARED IMPORTED)
+    set_target_properties(libpluto PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/pluto/src/.libs/libpluto.so )
+    SET(PLUTO_LIBRARY libpluto)
+else()
+    find_library(PLUTO_LIBRARY pluto REQUIRED)
+endif()
 
 
 # files .c
@@ -109,7 +142,6 @@ add_library(substrate_lib_shared SHARED
 set_target_properties(substrate_lib_shared PROPERTIES OUTPUT_NAME "substrate")
 
 
-
 target_link_libraries(substrate_exe ${OSL_LIBRARY})
 target_link_libraries(substrate_exe ${CANDL_LIBRARY})
 target_link_libraries(substrate_exe ${CLAY_LIBRARY})
@@ -119,4 +151,4 @@ if (GMP_LIBRARY)
 else()
     target_link_libraries(substrate_exe ${PIPLIB_DP_LIBRARY})
 endif()
-target_link_libraries(substrate_exe libpluto)
+target_link_libraries(substrate_exe ${PLUTO_LIBRARY})
